loopdowhile.Poucet1.scala.code
do{
  
  var nbPas: Int=0;
  
  for (i <- 1 to 5){
    
    avance();
    if ( estSurBiscuit()){nbPas= nbPas +1;}
  }
  
  
  nbPas match{
    case i if i<3 => gauche();
    case  - 			=> droite();
    
  }
  
  
  
} while (sortieTrouvee()!=true)

avance();
        